# travel_agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  travelAgent.code-workspace
backend/: .env.example  alembic.ini  pyproject.toml  test_db_conn.py  test_intent.py
backend/alembic/: env.py
backend/alembic/versions/: 7ab3605623fc_initial_schema.py
backend/app/: config.py  main.py
backend/app/adapters/: base.py  flight.py
backend/app/core/: exceptions.py  logging.py
backend/app/data/: mock_attractions.json
backend/app/db/: base_class.py  session.py
backend/app/models/: __init__.py  dining.py  itinerary.py  state.py
backend/app/schemas/: attraction.py  confidence.py  cost.py  daily_schedule.py  destination.py  dining.py  error.py  flight.py  intent.py  itinerary.py  module_05.py  state.py  transport.py
backend/app/services/: cost_summary_service.py  daily_schedule_service.py  destination_service.py  dining_service.py  flight.py  intent_parser_service.py  itinerary_service.py  state_service.py  transport.py
backend/app/tasks/: celery_app.py
backend/app/tools/: annotate_confidence.py  cluster_attractions.py  exchange_rate.py  flight_search.py  geocode_normalize.py  hotel_search.py  map_route.py  parse_time_intent.py  restaurant_lookup.py  visa_reminder.py
backend/scripts/: check_confidence_coverage.py  seed_dining_kb.py
backend/tests/: test_exceptions.py  test_logging.py  test_state_machine.py
backend/tests/integration/: test_full_system_flow.py  test_langgraph_flow.py
backend/tests/services/: test_attractions.py  (+2 more)
(+81 files in other folders)
